--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "bot",
   "dependencies": {
-    "discord.js": "^12.2.0"
+    "discord.js": "^12.2.0",
+    "event-to-promise": "^0.8.0"
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.4"
   },
   "scripts": {
-    "dev": "nodemon ."
+    "dev": "NODE_ENV=development nodemon bot"
   },
   "author": "Tom BANCHEREAU <tom.banchereau@viacesi.fr>",
   "license": "ISC"
